5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4067/executions/1684_1880.log
== SUBMITION (2019-04-29 15:57:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
num = int(input("valor: "))
 if num>=1 and num <= 12:
		if num==1:
			print("janeiro")
		elif num == 2:
			print("fevereiro")
		elif num == 3:
			print("marco")
		elif num==4:
			print("abril")
		elif num == 5:
			print("maio")
		elif num ==6:
			print("junho")
		elif num ==7:
			print("julho")
		elif num ==8:
			print("agosto")
		elif num ==9:
			print("setembro")
		elif num==10:
			print("outubro")
		elif num==11:
			print("novembro")
		elif num ==12:
			print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.163199
-- ERROR:
  File "/home/codebench/codes/1684/1880/main.py", line 3
    if num>=1 and num <= 12:
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:58:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
num = int(input("valor: "))
 if num>=1 and num <= 12:
		if num == 1:
			print("janeiro")
		elif num == 2:
			print("fevereiro")
		elif num == 3:
			print("marco")
		elif num == 4:
			print("abril")
		elif num == 5:
			print("maio")
		elif num == 6:
			print("junho")
		elif num ==7:
			print("julho")
		elif num ==8:
			print("agosto")
		elif num ==9:
			print("setembro")
		elif num==10:
			print("outubro")
		elif num==11:
			print("novembro")
		else:
			print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.210984
-- ERROR:
  File "/home/codebench/codes/1684/1880/main.py", line 3
    if num>=1 and num <= 12:
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:58:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
num = int(input("valor: "))
 if num>=1 and num <= 12:
		if num == 1:
			print("janeiro")
		elif num == 2:
			print("fevereiro")
		elif num == 3:
			print("marco")
		elif num == 4:
			print("abril")
		elif num == 5:
			print("maio")
		elif num == 6:
			print("junho")
		elif num ==7:
			print("julho")
		elif num ==8:
			print("agosto")
		elif num ==9:
			print("setembro")
		elif num==10:
			print("outubro")
		elif num==11:
			print("novembro")
		else:
			print("dezembro")
else:
	print("numero de mes invalido")
-- ERROR:
File "XXXX", line 3
    if num>=1 and num <= 12:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:58:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
num = int(input("valor: "))
 if num>=1 and num <= 12:
		if num == 1:
			print("janeiro")
		elif num == 2:
			print("fevereiro")
		elif num == 3:
			print("marco")
		elif num == 4:
			print("abril")
		elif num == 5:
			print("maio")
		elif num == 6:
			print("junho")
		elif num ==7:
			print("julho")
		elif num ==8:
			print("agosto")
		elif num ==9:
			print("setembro")
		elif num==10:
			print("outubro")
		elif num==11:
			print("novembro")
		else:
			print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.184826
-- ERROR:
  File "/home/codebench/codes/1684/1880/main.py", line 3
    if num>=1 and num <= 12:
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:58:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
num = int(input("valor: "))
 if num>=1 and num <= 12:
		if num == 1:
			print("janeiro")
		elif num == 2:
			print("fevereiro")
		elif num == 3:
			print("marco")
		elif num == 4:
			print("abril")
		elif num == 5:
			print("maio")
		elif num == 6:
			print("junho")
		elif num ==7:
			print("julho")
		elif num ==8:
			print("agosto")
		elif num ==9:
			print("setembro")
		elif num==10:
			print("outubro")
		elif num==11:
			print("novembro")
		else:
			print("dezembro")
else:
	print("numero de mes invalido")
-- ERROR:
File "XXXX", line 3
    if num>=1 and num <= 12:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:59:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
num = int(input("valor: "))
 if num>=1 and num <= 12:
	if num == 1:
		print("janeiro")
	elif num == 2:
		print("fevereiro")
	elif num == 3:
		print("marco")
	elif num == 4:
		print("abril")
	elif num == 5:
		print("maio")
	elif num == 6:
		print("junho")
	elif num ==7:
		print("julho")
	elif num ==8:
		print("agosto")
	elif num ==9:
		print("setembro")
	elif num==10:
		print("outubro")
	elif num==11:
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.165779
-- ERROR:
  File "/home/codebench/codes/1684/1880/main.py", line 3
    if num>=1 and num <= 12:
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:59:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
num = int(input("valor: "))
 if num>=1 and num <= 12:
	if num == 1:
		print("janeiro")
	elif num == 2:
		print("fevereiro")
	elif num == 3:
		print("marco")
	elif num == 4:
		print("abril")
	elif num == 5:
		print("maio")
	elif num == 6:
		print("junho")
	elif num ==7:
		print("julho")
	elif num ==8:
		print("agosto")
	elif num ==9:
		print("setembro")
	elif num==10:
		print("outubro")
	elif num==11:
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero de mes invalido")
-- ERROR:
File "XXXX", line 3
    if num>=1 and num <= 12:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:00:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
num = int(input("valor: "))
if num>=1 and num <= 12:
	if num == 1:
		print("janeiro")
	elif num == 2:
		print("fevereiro")
	elif num == 3:
		print("marco")
	elif num == 4:
		print("abril")
	elif num == 5:
		print("maio")
	elif num == 6:
		print("junho")
	elif num ==7:
		print("julho")
	elif num ==8:
		print("agosto")
	elif num ==9:
		print("setembro")
	elif num==10:
		print("outubro")
	elif num==11:
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero de mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:00:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
num = int(input("valor: "))
if num>=1 and num <= 12:
	if num == 1:
		print("janeiro")
	elif num == 2:
		print("fevereiro")
	elif num == 3:
		print("marco")
	elif num == 4:
		print("abril")
	elif num == 5:
		print("maio")
	elif num == 6:
		print("junho")
	elif num ==7:
		print("julho")
	elif num ==8:
		print("agosto")
	elif num ==9:
		print("setembro")
	elif num==10:
		print("outubro")
	elif num==11:
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.110471
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
